kylin-music (1.1.0-28) v101; urgency=medium

  * BUG号：
   - 78623【音乐】音乐最大化后，title栏依旧显示最大化按钮，点击依旧为最大化状态，第二次点击才可还原.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 17 Sep 2021 14:12:56 +0800

kylin-music (1.1.0-27) v101; urgency=medium

  * BUG号：
   - 69496【音乐】歌曲列表-选择歌曲右击-从歌单中删除/从本地删除，歌曲暂停状态下会自动播放下一首音乐
   - 79694【音乐】【3a5000】【mips】音乐文件通过音乐打开，会弹出一个空白框
   - 77622【音乐】插入u盘再拔出u盘后，添加本地文件/文件夹会显示已经拔出的U盘.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Thu, 16 Sep 2021 09:58:56 +0800

kylin-music (1.1.0-26) v101; urgency=medium

  * BUG号：
   - 77102【音乐】双击音乐不支持播放的m4a、m4r格式，会打开音乐软件，但无任何提示	
   - 78172【音乐】字体大小设置为13以上会出现按钮中文字显示不全
   - 78270【音乐】点击搜索到的歌单，无法跳转到搜索列表
   - 78296【音乐】【概率性】20次出现1次，中文模式下创建歌单，切换英文模式注销系统重新登录，打开音乐，歌单消失，重新创建歌单提示已存在
   - 78347【音乐】【搜索】存在空歌单时，歌曲列表不为空时搜索关键字进入搜索结果页面后，点击空歌单进入的页面没有“添加本地音乐”“添加本地文件夹”按钮，新建歌单后进入新歌单出现同样情况
   - 78363【音乐】英文环境下，系统字号设置为12及以上时，历史播放列表中“总歌曲数目”和“清空”不能完整显示
   - 78371【音乐】【搜索】在搜索框输入关键字后按小键盘的enter后，进入搜索结果页面，但是搜索结果预览框仍旧存在
   - 78687【桌面应用】【音乐】搜索出的音乐无法删除，选择删除时应弹出“搜索的歌曲无法删除”之类的提示
   - 78709【桌面应用】【音乐】关于界面下方没有间距
   - 77188【音乐】MIDI音频文件默认打开方式不为音乐
   - 78323【音乐】【概率性】30次出现2次，创建已存在的歌单，音乐应用闪退，且tmp目录下出现core文件.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Thu, 09 Sep 2021 15:54:14 +0800

kylin-music (1.1.0-25) v101; urgency=medium

  * BUG号：
   - 77102【音乐】双击音乐不支持播放的m4a、m4r格式，会打开音乐软件，但无任何提示
   - 78309【音乐】【搜索】歌曲列表为空时搜索关键字进入搜索结果页面后点击歌曲列表及各个歌单，没有添加音乐按钮，无法添加音乐.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 03 Sep 2021 15:54:14 +0800

kylin-music (1.1.0-24) v101; urgency=medium

  * BUG号：
   - 75002【需求-音乐-8067】【搜索】搜索结果列表中，搜索关键字未高亮
   - 76958【麒麟音乐】切换深色模式至系统默认，歌曲列表表格样式消失
   - 78107【音乐】系统字号设置为14、15时，右上角“播放全部”不能完整显示​
   - 78318【音乐】【搜索】英文环境下，设置11号字体时搜索框中的英文挡住搜索框右侧图标，更大字号时英文不能完整显示.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Thu, 02 Sep 2021 20:34:12 +0800

kylin-music (1.1.0-23) v101; urgency=medium

  * BUG号：