@@ -11,6 +11,9 @@
 #include <QFrame>
 #include <QX11Info>
 #include <QApplication>
+#include <QScreen>
+#include <QTimer>
+
 #include "UI/search/musicsearchlistview.h"
 #include "UI/player/searchedit.h"
 
@@ -55,6 +58,7 @@ public:
     MusicSearchListview *m_AlbumView  = nullptr;
 
 private:
+    void setCursorWithXEvent();
     QVBoxLayout *vlayout = nullptr;
 
     QLabel *m_MusicLabel = nullptr;
@@ -72,6 +76,7 @@ private:
     int m_resultPosY;
     int m_resultPosWidth;
     int m_resultPosHeight;
+    qint16 m_key;
 };
 
 #endif // SEARCHRESULT_H
